<resources>
    <string name="app_name">SS_New</string>
    <string name="smart">Smart</string>
    <string name="Switch">Switch</string>
    <string name="getStarted">Get Started</string>
    <string name="storageUsage">Storage Usage</string>
    <string name="storageRem">Remaining Storage</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="recent">Recent</string>
    <string name="seeAll">See All</string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="history">History</string>
    <string name="select">Select</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="documents">Documents</string>
    <string name="music">Music</string>
    <string name="apps">Apps</string>
    <string name="downloads">Downloads</string>
    <string name="permissions">Permissions</string>
    <string name="deniedPermissionsTxt">Permissions denied several time please go to settings and allow permissions to use all features</string>
    <string name="grantPermissions">Grant Permissions</string>
    <string name="loadingDataWait">Please wait..\nFile Retrieval in process</string>
    <string name="apk">Apk</string>
    <string name="video">Videos</string>
    <string name="image">Images</string>
    <string name="allFileSelected">All Files Selected</string>
    <string name="total">Total</string>
    <string name="selected">Selected</string>
    <string name="smartSwitch">Smart Switch</string>
    <string name="nothingFoundHere">No files found here</string>
    <string name="wifi">Wifi</string>
    <string name="scanQR">Scan QR</string>
    <string name="connection">Connection</string>
    <string name="nearByDevices">NearBy Devices</string>
    <string name="searchingForNearbyDevices">Searching for nearby devices</string>
    <string name="hotspot">Hot Spot</string>
    <string name="receivingData">Receiving Data</string>
    <string name="receiving">Receiving</string>
    <string name="done">Done</string>
    <string name="completed">Completed</string>
    <string name="sendingData">Sending Data</string>
    <string name="sending">Sending</string>
    <string name="document">Documents</string>


    <string name="deviceName">Device Name</string>
    <string name="hotSpot">Hot Spot</string>
    <string name="hotspotTxt">To utilize the Hotspot feature, a SIM card is necessary to carry out operations. If you do not have a SIM card, please consider using <b>Wifi Sharing</b> instead.</string>
    <string name="contine">Continue</string>
    <string name="goBack">Go back</string>
    <string name="enableLocation">Enable Location</string>
    <string name="enableLocationTxt">Please activate location services and attempt the action once more.</string>
    <string name="goToSettings">Go to settings</string>
    <string name="cancel">Cancel</string>
    <string name="swiftTransfer">Transfer</string>
    <string name="transferTxt">Please ensure you have already selected files on sender to avoid wait on receiver facet!</string>
    <string name="wait">Wait</string>
    <string name="permissionAndConsent">Your privacy matters. We collect and use your data securely to improve your app experience. Rest assured, we never share your information with third parties.\n\nWe may request permissions like <b>camera</b>, <b>location</b>,<b>Storage access</b> and <b>Write settings</b>. Your privacy matters, and we never share your info with third parties.</string>
    <string name="noFilesFound">No files Found</string>
    <string name="exitTxt">Are you sure you want to exit now?</string>
    <string name="Yes">Yes</string>
    <string name="no">No</string>
    <string name="ppU"><u>Privacy Policy</u></string>
    <string name="selectFileTxt">Please select files to send</string>
    <string name="noInternetTxt">No internet connection</string>
    <string name="ensureWIFIOnTxt">Please make sure that app is connected to any WIFI</string>
    <string name="enableLocationTxtToast">Location services are required. Please enable them and try again.</string>
    <string name="somethingWrong">Something went wrong Please try again</string>
    <string name="errorInConnection">Error in connecting</string>
    <string name="pleaseTurnOnLocation">Please turn on location</string>
    <string name="turnOnWifi">Please turn on wifi</string>
    <string name="cantOpenFile">Can\'t open this file</string>
    <string name="language">Language</string>
    <string name="apply">Apply</string>
    <string name="fileSelected">Files Selected</string>
    <string name="loadingAd">Loading Ad please wait</string>
    <string name="skip">Skip</string>
    <string name="desc_subs">Currently your are using our free version with ads and limited transfers.</string>
</resources>