<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout17"
        android:layout_width="match_parent"
        android:background="@drawable/shape_round_corner_15"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/_60sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvConsent1"
            android:layout_width="148dp"
            android:layout_height="42dp"
            android:layout_margin="@dimen/_15sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/permissions"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvConsent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/permissionAndConsent"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConsent1" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGrantPermissions"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/shape_round_corner_10"
            android:backgroundTint="@color/color_blue"
            android:fontFamily="@font/poppins_medium"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/grantPermissions"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConsent2" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

