<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout17"
        android:layout_width="match_parent"
        android:padding="@dimen/_15sdp"
        android:background="@drawable/shape_exit_bg"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvConsent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/exitTxt"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConsent2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExit"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginVertical="15dp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:background="@drawable/shape_circle"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Yes"
                android:textAllCaps="false"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/_15sdp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginVertical="15dp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/shape_circle"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/color_blue"
                android:layout_marginEnd="@dimen/_15sdp"
                android:textSize="@dimen/_15sdp"/>




        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

