<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg2"
    tools:context=".fragments.dashboard_frags.FilesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bahnschrift"
            android:text="@string/select"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/shape_round_corner_15"
        android:elevation="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

        <LinearLayout
            android:id="@+id/btnImages"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/btnVideos"
            app:layout_constraintHeight_percent=".45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".25">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/icon_images" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:paddingVertical="@dimen/_1sdp"
                android:text="@string/images"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnVideos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/btnDocs"
            app:layout_constraintHeight_percent=".45"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnImages"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".25">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/icon_videos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:paddingVertical="@dimen/_1sdp"
                android:text="@string/videos"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDocs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/btnMusic"
            app:layout_constraintHeight_percent=".45"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnVideos"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".25">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/icon_docs" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:paddingVertical="@dimen/_1sdp"
                android:text="@string/documents"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnMusic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".45"
            app:layout_constraintStart_toEndOf="@+id/btnDocs"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".25">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/icon_music" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:paddingVertical="@dimen/_1sdp"
                android:text="@string/music"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="#20000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/btnApps"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnImages"
            app:layout_constraintHeight_percent=".45"
            app:layout_constraintStart_toStartOf="@+id/btnImages"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintWidth_percent=".25">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/icon_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:paddingVertical="@dimen/_1sdp"
                android:text="@string/apps"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDownloads"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnVideos"
            app:layout_constraintHeight_percent=".45"
            app:layout_constraintStart_toStartOf="@+id/btnVideos"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintWidth_percent=".25">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/icon_download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:paddingVertical="@dimen/_1sdp"
                android:text="@string/downloads"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnApk"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnDocs"
            app:layout_constraintHeight_percent=".45"
            app:layout_constraintStart_toEndOf="@+id/btnVideos"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintWidth_percent=".25">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_apk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bahnschrift"
                android:paddingVertical="@dimen/_1sdp"
                android:text="@string/apk"
                android:textColor="@color/black" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_195sdp"
        android:background="#90E1E1E1"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="Ad Here"
            android:textColor="@color/color_blue"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>